--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
