--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "slate": "^0.59.0",
-    "slate-react": "^0.59.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
