--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "circular-icon-wrapper": "0.0.0",
+    "classnames": "^2.2.6",
     "dateformat": "^4.4.1",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
