--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "classnames": "^2.2.6",
     "dateformat": "^4.4.1",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
