--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -11,6 +11,7 @@ djangorestframework = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
 djangorestframework-jwt = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.7"
